--- a/scripts/utilities/variables.css
+++ b/scripts/utilities/variables.css
@@ -110,8 +110,8 @@
   /* --- Other --- */
 
   /* Fonts */
-  --editor-font-family: 'BR Cobane';
-  --editor-font-family-ligatures: 'BR Cobane';
+  --editor-font-family: 'Raleway';
+  --editor-font-family-ligatures: 'Raleway';
   --code-font-family: 'JetBrains Mono NL';
   --code-font-family-ligatures: 'JetBrains Mono';
   --system-font-family: 'Monaco';
@@ -901,118 +901,132 @@
   src: url('chrome-extension://__MSG_@@extension_id__/fonts/Fixedsys/Fixedsys-Regular.woff2') format('woff2');
 }
 
-/* --- BR Cobane --- */
+/* --- Raleway --- */
 
 /* Normal */
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 100;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-Thin.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-Thin.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 200;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-ExtraLight.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-ExtraLight.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 300;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-Light.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-Light.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-Regular.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-Regular.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-Medium.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-Medium.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 600;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-SemiBold.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-SemiBold.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-Bold.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-Bold.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-ExtraBold.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Raleway';
   font-style: normal;
   font-weight: 900;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-Black.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-Black.woff2') format('woff2');
 }
 
 /* Italic */
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 100;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-ThinItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-ThinItalic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 200;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-ExtraLightItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-ExtraLightItalic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 300;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-LightItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-LightItalic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 400;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-RegularItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-RegularItalic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 500;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-MediumItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-MediumItalic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 600;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-SemiBoldItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-SemiBoldItalic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 700;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-BoldItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-BoldItalic.woff2') format('woff2');
 }
 
 @font-face {
-  font-family: 'BR Cobane';
+  font-family: 'Raleway';
+  font-style: italic;
+  font-weight: 800;
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-ExtraBoldItalic.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Raleway';
   font-style: italic;
   font-weight: 900;
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/BRCobane/BRCobane-BlackItalic.woff2') format('woff2');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/Raleway/Raleway-BlackItalic.woff2') format('woff2');
 }
