--- a/scripts/utilities/variables.css
+++ b/scripts/utilities/variables.css
@@ -25,6 +25,7 @@
   --editor-footer-background-color: #061626;
   --editor-footer-border-color: #192C40;
   --editor-code-line-numbers-background-color: #061626;
+  --editor-code-line-numbers-border-color: #061626;
 
   /* Editor */
   --cursor-color: #8AA6C3;
