--- a/scripts/utilities/themes/night-owl.css
+++ b/scripts/utilities/themes/night-owl.css
@@ -51,6 +51,7 @@
   --brackets-color: #F9D849;
   --matching-brackets-background-color: #223342;
   --matching-brackets-border-color: #888888;
+  --nonmatching-brackets-text-color: #c33228;
 
   /* Buttons */
   --general-button-text-color: #ffffff;
