--- a/scripts/utilities/themes/night-owl.css
+++ b/scripts/utilities/themes/night-owl.css
@@ -96,6 +96,7 @@
 
   /* Extension Pupup */
   --extension-popup-glow-color: #89C2DA;
+  --extension-popup-text-glow-blur-radius: 0px;
 
   --extension-popup-switch-off-color: #5e6368;
   --extension-popup-switch-on-primary-background-color: #89C2DA;
