Add Extension Popup Switch Border Color Setting

--- a/scripts/base/variables.css
+++ b/scripts/base/variables.css
@@ -106,6 +106,7 @@
   --extension-popup-switch-on-primary-shadow-color: #4B7A8D;
   --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
   --extension-popup-switch-on-text-color: #3B6A7D;
+  --extension-popup-switch-on-border-color: #89c2d966;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
   --extension-popup-dangerous-button-background-color: #ff2335;
