--- a/scripts/base/themes/modern-light.css
+++ b/scripts/base/themes/modern-light.css
@@ -104,6 +104,7 @@
   --extension-popup-switch-on-primary-shadow-color: #00000033;
   --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
   --extension-popup-switch-on-text-color: #1a1a1a;
+  --extension-popup-switch-on-border-color: #89c2d966;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
   --extension-popup-dangerous-button-background-color: #ff2335;
