--- a/scripts/base/themes/night-owl.css
+++ b/scripts/base/themes/night-owl.css
@@ -2,43 +2,45 @@
   /* --- Colors --- */
 
   /* Text */
-  --primary-text-color: #E5E2DC;
-  --secondary-text-color: #C5C2BC;
-  --tertiary-text-color: #93918C;
-  --placeholder-color: #8E9AB6;
-  --error-text-color: #F22C3E;
+  --primary-text-color: #e5e2dc;
+  --secondary-text-color: #c5c2bc;
+  --tertiary-text-color: #93918c;
+  --placeholder-color: #8e9ab6;
+  --error-text-color: #f22c3e;
 
-  --editor-header-text-color: #E5E2DC;
+  --editor-header-text-color: #e5e2dc;
   --editor-footer-text-color: #506377;
 
   /* Backgrounds */
   --primary-background-color: #061626;
-  --secondary-background-color: #05131F;
+  --secondary-background-color: #05131f;
   --tertiary-background-color: #122438;
-  --quaternary-background-color: #475C70;
+  --quaternary-background-color: #475c70;
 
   --editor-header-background-color: #061626;
-  --editor-header-border-color: #05131F;
-  --editor-header-shadow-color: #05131F;
+  --editor-header-border-color: #05131f;
+  --editor-header-shadow-color: #05131f;
   --editor-footer-background-color: #061626;
-  --editor-footer-border-color: #192C40;
+  --editor-footer-border-color: #192c40;
   --editor-code-line-numbers-background-color: #061626;
   --editor-code-line-numbers-border-color: #061626;
 
   /* Editor */
-  --cursor-color: #8AA6C3;
+  --cursor-color: #8aa6c3;
   --line-number-color: #506377;
-  --active-line-number-color: #CBE3FA;
-  --active-line-background-color: #05121E;
-  --selected-text-background-color: #1D3B53;
-  --selected-searching-text-background-color: #555B8C;
-  --searching-text-background-color: #008CFF4D;
-  --indent-guides-color: #283B5F;
-  --hint-matching-symbols-color: #CBE386;
-  --tooltip-border-color: #657D95;
+  --active-line-number-color: #cbe3fa;
+  --active-line-background-color: #05121e;
+  --selected-text-background-color: #1d3b53;
+  --selected-searching-text-background-color: #555b8c;
+  --searching-text-background-color: #008cff4d;
+  --indent-guides-color: #283b5f;
+  --hint-matching-symbols-color: #cbe386;
+  --tooltip-border-color: #657d95;
 
   /* Syntax */
   --comments-color: #677677;
+  --system-functions-color: #8aa9f9;
+  --variable-color: #d8dbdf;
   --system-functions-color: #8AA9F9;
   --variable-color: #D8DBDF;
   --affected-variable-color: #95D8C9;
@@ -49,6 +51,14 @@
   --separators-color: #D7DEEA;
   --semicolons-color: #D7DEEA;
   --brackets-color: #F9D849;
+  --affected-variable-color: #95d8c9;
+  --strings-color: #e6c594;
+  --constants-color: #ec6477;
+  --math-operators-color: #bf94e4;
+  --logical-operators-color: #bf94e4;
+  --separators-color: #d7deea;
+  --semicolons-color: #d7deea;
+  --brackets-color: #f9d849;
   --matching-brackets-background-color: #223342;
   --matching-brackets-border-color: #888888;
   --nonmatching-brackets-text-color: #c33228;
@@ -71,7 +81,7 @@
   --close-press-button-border-color: #506377;
 
   --save-arguments-button-text-color: #ffffff;
-  --save-arguments-normal-button-background-color: #05131F;
+  --save-arguments-normal-button-background-color: #05131f;
   --save-arguments-normal-button-border-color: #314458;
   --save-arguments-normal-button-shadow-color: #506377;
   --save-arguments-hover-button-background-color: #314458;
@@ -79,31 +89,31 @@
   --save-arguments-press-button-border-color: #506377;
 
   --safe-button-text-color: #ffffff;
-  --safe-normal-button-background-color: #00B200;
+  --safe-normal-button-background-color: #00b200;
   --safe-normal-button-border-color: #019101;
-  --safe-normal-button-shadow-color: #006E00;
+  --safe-normal-button-shadow-color: #006e00;
   --safe-hover-button-background-color: #019101;
-  --safe-press-button-background-color: #006E00;
-  --safe-press-button-border-color: #006E00;
+  --safe-press-button-background-color: #006e00;
+  --safe-press-button-border-color: #006e00;
 
   --dangerous-button-text-color: #ffffff;
-  --dangerous-normal-button-background-color: #E53343;
-  --dangerous-normal-button-border-color: #CD1222;
-  --dangerous-normal-button-shadow-color: #9E0E1A;
-  --dangerous-hover-button-background-color: #CD1222;
-  --dangerous-press-button-background-color: #9E0E1A;
-  --dangerous-press-button-border-color: #9E0E1A;
+  --dangerous-normal-button-background-color: #e53343;
+  --dangerous-normal-button-border-color: #cd1222;
+  --dangerous-normal-button-shadow-color: #9e0e1a;
+  --dangerous-hover-button-background-color: #cd1222;
+  --dangerous-press-button-background-color: #9e0e1a;
+  --dangerous-press-button-border-color: #9e0e1a;
 
   /* Extension Pupup */
-  --extension-popup-glow-color: #89C2DA;
+  --extension-popup-glow-color: #89c2da;
   --extension-popup-text-glow-blur-radius: 0px;
 
   --extension-popup-switch-off-color: #5e6368;
-  --extension-popup-switch-on-primary-background-color: #89C2DA;
-  --extension-popup-switch-on-secondary-background-color: #4B7A8D1A;
-  --extension-popup-switch-on-primary-shadow-color: #4B7A8D;
-  --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
-  --extension-popup-switch-on-text-color: #3B6A7D;
+  --extension-popup-switch-on-primary-background-color: #89c2da;
+  --extension-popup-switch-on-secondary-background-color: #4b7a8d1a;
+  --extension-popup-switch-on-primary-shadow-color: #4b7a8d;
+  --extension-popup-switch-on-secondary-shadow-color: #4d7a8d33;
+  --extension-popup-switch-on-text-color: #3b6a7d;
   --extension-popup-switch-on-border-color: #89c2d966;
 
   --extension-popup-dangerous-button-text-color: #ff2335;
