--- a/scripts/base/themes/zoho-default-dark.css
+++ b/scripts/base/themes/zoho-default-dark.css
@@ -2,40 +2,40 @@
   /* --- Colors --- */
 
   /* Text */
-  --primary-text-color: #efefef; 
-  --secondary-text-color: #d4d4d4; 
+  --primary-text-color: #efefef;
+  --secondary-text-color: #d4d4d4;
   --tertiary-text-color: #8d8d8d;
   --placeholder-color: #8b8983;
   --error-text-color: #ff3e4e;
 
-  --editor-header-text-color: #f0f0f0; 
-  --editor-footer-text-color: #8d8d8d; 
+  --editor-header-text-color: #f0f0f0;
+  --editor-footer-text-color: #8d8d8d;
 
   /* Backgrounds */
-  --primary-background-color: #19191d; 
-  --secondary-background-color: #2c2c31; 
-  --tertiary-background-color: #1f1f24; 
-  --quaternary-background-color: #3a3a3a; 
+  --primary-background-color: #19191d;
+  --secondary-background-color: #2c2c31;
+  --tertiary-background-color: #1f1f24;
+  --quaternary-background-color: #3a3a3a;
 
-  --editor-header-background-color: #1f2a46; 
-  --editor-header-border-color: #2d344a; 
-  --editor-header-shadow-color: #1f2a4675; 
-  --editor-footer-background-color: #202024; 
-  --editor-footer-border-color: #2c2c31; 
+  --editor-header-background-color: #1f2a46;
+  --editor-header-border-color: #2d344a;
+  --editor-header-shadow-color: #1f2a4675;
+  --editor-footer-background-color: #202024;
+  --editor-footer-border-color: #2c2c31;
   --editor-code-line-numbers-background-color: #202024;
   --editor-code-line-numbers-border-color: #2c2c31;
 
   /* Editor */
-  --cursor-color: #8b8983; 
-  --line-number-color: #bababa; 
-  --active-line-number-color: #f0f0f0; 
-  --active-line-background-color: #202326; 
-  --selected-text-background-color: #313338; 
-  --selected-searching-text-background-color: #343434; 
-  --searching-text-background-color: #253440; 
-  --indent-guides-color: #3c3c42; 
+  --cursor-color: #8b8983;
+  --line-number-color: #bababa;
+  --active-line-number-color: #f0f0f0;
+  --active-line-background-color: #202326;
+  --selected-text-background-color: #313338;
+  --selected-searching-text-background-color: #343434;
+  --searching-text-background-color: #253440;
+  --indent-guides-color: #3c3c42;
   --hint-matching-symbols-color: #ffb77d;
-  --tooltip-border-color: #3a3a3a; 
+  --tooltip-border-color: #3a3a3a;
 
   /* Syntax */
   --comments-color: #808080;
@@ -81,28 +81,28 @@
   --safe-button-text-color: #efefef;
   --safe-normal-button-background-color: linear-gradient(0deg, #009e00, #00b400);
   --safe-normal-button-border-color: #019101;
-  --safe-normal-button-shadow-color: #006E00;
+  --safe-normal-button-shadow-color: #006e00;
   --safe-hover-button-background-color: linear-gradient(0deg, #018e01, #00b700);
   --safe-press-button-background-color: #029202;
   --safe-press-button-border-color: #029202;
 
   --dangerous-button-text-color: #efefef;
   --dangerous-normal-button-background-color: linear-gradient(0deg, #c92d3a, #e93745);
-  --dangerous-normal-button-border-color: #CD1222;
-  --dangerous-normal-button-shadow-color: #9E0E1A;
+  --dangerous-normal-button-border-color: #cd1222;
+  --dangerous-normal-button-shadow-color: #9e0e1a;
   --dangerous-hover-button-background-color: linear-gradient(0deg, #b62935, #f13645);
   --dangerous-press-button-background-color: #bf2b37;
   --dangerous-press-button-border-color: #bf2b37;
-  
+
   /* Extension Pupup */
   --extension-popup-glow-color: #a5a5a5;
   --extension-popup-text-glow-blur-radius: 0px;
 
   --extension-popup-switch-off-color: #7f7f7f;
   --extension-popup-switch-on-primary-background-color: #a5a5a5;
-  --extension-popup-switch-on-secondary-background-color: #4B7A8D1A;
+  --extension-popup-switch-on-secondary-background-color: #4b7a8d1a;
   --extension-popup-switch-on-primary-shadow-color: #00000033;
-  --extension-popup-switch-on-secondary-shadow-color: #4D7A8D33;
+  --extension-popup-switch-on-secondary-shadow-color: #4d7a8d33;
   --extension-popup-switch-on-text-color: #282828;
   --extension-popup-switch-on-border-color: #89c2d966;
 
